# ee-devops-journey

./: README.md
week-01-dockerize-fastapi/: README.md
week-01-dockerize-fastapi/fastapi-hello-world/: Dockerfile  README.md  pyproject.toml
